# nodeES6/dist-server/apiRouter.js
@@ -16,7 +16,8 @@ function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { de
 var apiRouter = _express.default.Router(); //User routes
 
 
-apiRouter.route('/user/list/').get(_users.default.getUsers);
+apiRouter.route('/user/list/').get(_users.default.getListUsers);
+apiRouter.route('/user/get/').post(_users.default.getUser);
 apiRouter.route('/user/post/').post(_users.default.addUser);
 apiRouter.route('/user/put/').put(_users.default.putUser);
 apiRouter.route('/user/delete/').delete(_users.default.deleteUser);
