# nodeES6/server/apiRouter.js
@@ -6,7 +6,8 @@ import users from './routes/users';
 var apiRouter = express.Router();
 
 //User routes
-apiRouter.route('/user/list/').get(users.getUsers);
+apiRouter.route('/user/list/').get(users.getListUsers);
+apiRouter.route('/user/get/').post(users.getUser);
 apiRouter.route('/user/post/').post(users.addUser);
 apiRouter.route('/user/put/').put(users.putUser);
 apiRouter.route('/user/delete/').delete(users.deleteUser);
